# nav_hub

./: CMakeLists.txt  README.md  package.xml
btree/: custom_tree.xml  nav_on_route_graph.xml  nav_on_route_graph_oregon.xml  nav_on_route_graph_updated.xml  nav_on_route_graph_waiting_for_obstacle.xml  nav_on_route_graph_with_track.xml  wait_for_obstacle.xml
config/: demo_aceleradora.json  nav_routegraph.yaml  sim_nav_params.yaml  slam_params.yaml  slamtoolbox_life_long_params.yaml  solid_state_lidar.yaml
config/ponto-ponto/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
config/ponto-ponto-demo/: 1.json  2.json
config/ponto-ponto-demo/teste_fora/: 1.json  2.json  3.json  4.json  5.json  6.json
config/ponto-ponto-zen/: 1.json  2.json  3.json  4.json  5.json  6.json
config/ponto-ponto-zen/backup/: 1.json  2.json  4.json  5.json  6.json  7.json
config/ponto-ponto/route_graph/: points_of_interest.json
config/speedlimit+tof/: nav.yaml
graphs/: aceleradoras.json
include/nav_hub/: actions_move.hpp  costmap_cleaner.hpp  log_manager.hpp  stop_obstacle_node.hpp
launch/: essentials.launch.py  launch_amcl.launch.py  mapeamento.launch.py  navigation.launch.py  planner_server_valgrind.launch.py  slam.launch.py
launch/global_planner/: main_dinamica.launch.py  nav_dinamico.launch.py  nav_dinamico.py
launch/ponto-a-ponto/: essential_ponto_linear.launch.py  main_ponto_linear.launch.py  nav_pontoponto.launch.py
launch/route_graph/: nav_graph.launch.py  sim_nav_graph.launch.py
launch/solid_state_lidar/: essential_tof.launch.py  main_tof.launch.py  nav_tof.launch.py
launch/speed_limit+tof/: essential.launch.py  main.launch.py  nav.launch.py
maps/: aceleradora.pgm  aceleradora.yaml  aceleradora_speed_mask.pgm  aceleradora_speed_mask.yaml
route/: route_1.json  teste.json
route/route_graph/: aceleradoras.json  goals (oregon).json  goals_aceleradora_teste_oregon_2.json  goals_aceleradora_teste_oregon_3.json  goals_oregon (Cópia 2).json  goals_oregon (Cópia).json  goals_oregon (cópia).json  goals_oregon-24-04-26-2.json  goals_oregon-24-04-26.json  goals_oregon-29-04-26.json  goals_oregon.json  goals_oregon_before_home_point_change.json  goals_true.json  graph_to_goals.py
src/: actions_move.cpp  botoeira_ponto_linear.cpp  costmap_cleaner.cpp  encontrador_de_pilastra.py  log_manager.cpp  log_manager.py  main_route_graph.cpp  recall_clicked_point.cpp  scan_info.cpp  stop_obstacle.cpp  tf_listener.cpp  wait_for_amcl.cpp
